# FastMssql

./: Cargo.toml  README.md  fastmssql.pyi  pyproject.toml
python/fastmssql/: __init__.py
src/: azure_auth.rs  batch.rs  connection.rs  lib.rs  parameter_conversion.rs  pool_manager.rs  py_parameters.rs  transaction.rs  type_mapping.rs  types.rs
tests/: test_application_intent_behavior.py  test_context_manager_edge_cases.py  test_data_types.py  test_parameter_conversions_advanced.py  test_parameters_edge_cases.py  test_simple_query.py  test_sql_error.py  test_transaction_forwarded_methods.py
