[package]
name = "fastmssql_core"
version = "0.6.8"
edition = "2024"

[lib]
name = "fastmssql_core"
crate-type = ["cdylib"]

# Ultra-high performance profile with aggressive CPU optimizations
[profile.release]
opt-level = 3                # Maximum optimization
lto = "fat"                  # Full link-time optimization
codegen-units = 1            # Better optimization, slower compile
panic = "abort"              # Smaller binary, faster code
strip = true                 # Remove debug symbols
overflow-checks = true       # Enable overflow checks for safety

# Performance-focused development profile
[profile.dev]
opt-level = 1               # Some optimization for faster dev iteration
overflow-checks = true      # Keep safety checks in dev
debug = true               # Keep debug info for development

# Optimize dependencies even in dev mode
[profile.dev.package."*"]
opt-level = 2

[dependencies]
pyo3 = { version = "0.28.3", features = ["extension-module", "abi3-py311"] }
pyo3-async-runtimes = { version = "0.28.0", features = ["tokio", "tokio-runtime"] }
tokio = { version = "1.52.1", features = ["full"] }
tokio-util = { version = "0.7.18", features = ["compat"] }
tiberius = { version = "0.12.3", features = ["chrono", "rustls"], default-features = false }
bb8 = "0.9.1"
bb8-tiberius = "0.16"
chrono = { version = "0.4.44" }
uuid = { version = "1.23.1" }
ahash = "0.8.12"              # Faster hashing algorithm (used in optimized_types.rs)
smallvec = "1.15.1"          # Stack-allocated vectors for small collections
parking_lot = "0.12.5"       # Faster mutex/RwLock implementation than std::sync
mimalloc = { version = "0.1.50", default-features = false } # Microsoft's fast memory allocator
slab = "0.4.12"              # Pinned sub-dependency due to CVE-2025-55159
bytes = "1.11.1"             # Pinned sub-dependency due to CVE-2026-25541
quinn-proto = "0.11.14"      # Pinned sub-dependency due to CVE-2026-31812

# Azure authentication dependencies
reqwest = { version = "0.13.2", features = ["json", "rustls"], default-features = false }
serde_json = "1.0.149"
serde_urlencoded = "0.7.1"


[dev-dependencies]
tempfile = "3.27.0"
